--- a/bets/templates/bets/bets.html
+++ b/bets/templates/bets/bets.html
@@ -20,7 +20,7 @@
                             <div>
                                 <h6>+7</h6>
                             </div>
-                            <img class="img-fluid" src="/static/media/Seahawks.png" width="60" height="60">
+                            <img class="team-logo" src="/static/media/Seahawks.png">
                             <div><small>(5-6)</small></div>
                         </div>
                     </div>
@@ -29,7 +29,7 @@
                             <div>
                                 <h6>-7</h6>
                             </div>
-                            <img class="img-fluid" src="/static/media/Rams.png" width="60" height="60">
+                            <img class="team-logo" src="/static/media/Rams.png">
                             <div><small>(7-4)</small></div>
                         </div>
                     </div>
@@ -100,7 +100,7 @@
         </div>
         {% endif %}
         <input type="radio" name="{{ currentGame.game.id }}" id="{{ currentGame.game.homeTeam.name }}-bet" value="{{ currentGame.game.homeTeam.name }}" checked="checked">
-        <img class="img-fluid" src="/static/media/{{ currentGame.game.homeTeam.name }}.png" width="60" height="60">
+        <img class="team-logo" src="/static/media/{{ currentGame.game.homeTeam.name }}.png">
         <div><small>{{ currentGame.game.homeTeam.wins }} - {{ currentGame.game.homeTeam.losses }} {% if currentGame.game.homeTeam.ties > 0 %} - {{ currentGame.game.homeTeam.ties }} {% endif %}</small></div>
     </div>
     {% else %}
@@ -115,7 +115,7 @@
         </div>
         {% endif %}
         <input type="radio" name="{{ currentGame.game.id }}" id="{{ currentGame.game.homeTeam.name }}-bet" value="{{ currentGame.game.homeTeam.name }}">
-        <img class="img-fluid" src="/static/media/{{ currentGame.game.homeTeam.name }}.png" width="60" height="60">
+        <img class="team-logo" src="/static/media/{{ currentGame.game.homeTeam.name }}.png">
         <div><small>{{ currentGame.game.homeTeam.wins }} - {{ currentGame.game.homeTeam.losses }} {% if currentGame.game.homeTeam.ties > 0 %} - {{ currentGame.game.homeTeam.ties }} {% endif %}</small></div>
     </div>
     {% endif %}
@@ -134,7 +134,7 @@
         </div>
         {% endif %}
         <input type="radio" name="{{ currentGame.game.id }}" id="{{ currentGame.game.awayTeam.name }}-bet" value="{{ currentGame.game.awayTeam.name }}" checked="checked">
-        <img class="img-fluid" src="/static/media/{{ currentGame.game.awayTeam.name }}.png" width="60" height="60">
+        <img class="team-logo" src="/static/media/{{ currentGame.game.awayTeam.name }}.png">
         <div><small>{{ currentGame.game.awayTeam.wins }} - {{ currentGame.game.awayTeam.losses }} {% if currentGame.game.awayTeam.ties > 0 %} - {{ currentGame.game.awayTeam.ties }} {% endif %}</small></div>
     </div>
     {% else %}
@@ -149,7 +149,7 @@
         </div>
         {% endif %}
         <input type="radio" name="{{ currentGame.game.id }}" id="{{ currentGame.game.awayTeam.name }}-bet" value="{{ currentGame.game.awayTeam.name }}">
-        <img class="img-fluid" src="/static/media/{{ currentGame.game.awayTeam.name }}.png" width="60" height="60">
+        <img class="team-logo" src="/static/media/{{ currentGame.game.awayTeam.name }}.png">
         <div><small>{{ currentGame.game.awayTeam.wins }} - {{ currentGame.game.awayTeam.losses }} {% if currentGame.game.awayTeam.ties > 0 %} - {{ currentGame.game.awayTeam.ties }} {% endif %}</small></div>
     </div>
     {% endif %}
@@ -166,7 +166,7 @@
         </div>
         {% endif %}
         <input type="radio" name="{{ currentGame.game.id }}" id="{{ currentGame.game.homeTeam.name }}-bet" value="{{ currentGame.game.homeTeam.name }}">
-        <img class="img-fluid" src="/static/media/{{ currentGame.game.homeTeam.name }}.png" width="60" height="60">
+        <img class="team-logo" src="/static/media/{{ currentGame.game.homeTeam.name }}.png">
         <div><small>{{ currentGame.game.homeTeam.wins }} - {{ currentGame.game.homeTeam.losses }} {% if currentGame.game.homeTeam.ties > 0 %} - {{ currentGame.game.homeTeam.ties }} {% endif %}</small></div>
     </div>
     <div class="col-lg-2 text-center mt-3 p-0">
@@ -183,7 +183,7 @@
         </div>
         {% endif %}
         <input type="radio" name="{{ currentGame.game.id }}" id="{{ currentGame.game.awayTeam.name }}-bet" value="{{ currentGame.game.awayTeam.name }}">
-        <img class="img-fluid" src="/static/media/{{ currentGame.game.awayTeam.name }}.png" width="60" height="60">
+        <img class="team-logo" src="/static/media/{{ currentGame.game.awayTeam.name }}.png">
         <div><small>{{ currentGame.game.awayTeam.wins }} - {{ currentGame.game.awayTeam.losses }} {% if currentGame.game.awayTeam.ties > 0 %} - {{ currentGame.game.awayTeam.ties }} {% endif %}</small></div>
     </div>
     {% endif %}
@@ -205,7 +205,7 @@
             </div>
             {% endif %}
             <input type="radio" name="{{ currentGame.game.id }}" id="{{ currentGame.game.homeTeam.name }}-bet" value="{{ currentGame.game.homeTeam.name }}" disabled>
-            <img class="img-fluid" src="/static/media/{{ currentGame.game.homeTeam.name }}.png" width="60" height="60">
+            <img class="team-logo" src="/static/media/{{ currentGame.game.homeTeam.name }}.png">
             <div><small>{{ currentGame.game.homeTeam.wins }} - {{ currentGame.game.homeTeam.losses }} {% if currentGame.game.homeTeam.ties > 0 %} - {{ currentGame.game.homeTeam.ties }} {% endif %}</small></div>
         </div>
         <div class="col-lg-2 d-flex flex-column align-items-center justify-content-center text-center p-0">
@@ -231,7 +231,7 @@
                 </div>
                 {% endif %}
                 <input type="radio" name="{{ currentGame.game.id }}" id="{{ currentGame.game.awayTeam.name }}-bet" value="{{ currentGame.game.awayTeam.name }}" disabled>
-                <img class="img-fluid" src="/static/media/{{ currentGame.game.awayTeam.name }}.png" width="60" height="60">
+                <img class="team-logo" src="/static/media/{{ currentGame.game.awayTeam.name }}.png">
                 <div><small>{{ currentGame.game.awayTeam.wins }} - {{ currentGame.game.awayTeam.losses }} {% if currentGame.game.awayTeam.ties > 0 %} - {{ currentGame.game.awayTeam.ties }} {% endif %}</small></div>
             </div>
         </div>
