Removed unused class in Account menu

--- a/fantasyFootball/templates/fantasyFootball/base.html
+++ b/fantasyFootball/templates/fantasyFootball/base.html
@@ -37,7 +37,7 @@
             <li class="nav-item dropdown mr-2 mb-1 mt-1">
                 <a class="dropdown-toggle nav-link nav-account" data-toggle="dropdown" aria-expanded="false" href="#">
                     <img class="mr-2" src="{% static 'media/avatarWhite.png' %}" width="25" height="auto" />
-                    <span class="username-nav">Account</span>
+                    <span>Account</span>
                 </a>
                 <div class="dropdown-menu" aria-labelledby="navbarDropdownMenuLink">
                     <a class="dropdown-item dropdown-account" href="/account/">My Account</a>
