Added public profile view and added home buttons to profile pages. There is now a profile view for the logged in user and a profile view for anyone to view any other player's profile with minimal information.

--- a/home/templates/home/dashboard.html
+++ b/home/templates/home/dashboard.html
@@ -62,7 +62,8 @@
                                         {% else %}
                                         <td>{{ forloop.counter }}</td>
                                         {% endif %}
-                                        <td>{{ currentUser.username }}</td>
+                                        <td>
+                                            <a href="/account/{{ currentUser.username }}/">{{ currentUser.username }}</a></td>
                                         <td>{{ currentUser.totalScore }}</td>
                                         {% if currentUser.weeklyGain > 0 %}
                                         <td class="text-success">+{{ currentUser.weeklyGain }}</td>
