--- a/account/templates/account/profile.html
+++ b/account/templates/account/profile.html
@@ -3,6 +3,7 @@
 
 <div class="main-content">
     <div class="container mt-5">
+        <a class="btn btn-blue mb-2" href='/'>&#8249; Home</a>
         <!-- Table -->
         <div class="card card-profile shadow">
             <div class="row mt-3">
