Fixed case sensitivity on default seahawks logo

--- a/account/templates/account/profile.html
+++ b/account/templates/account/profile.html
@@ -11,7 +11,7 @@
                     <h3>{{ user.username }}</h3>
                     {% if profile.favoriteTeam %}
                     <img id="favTeamImage" src="/static/media/{{ profile.favoriteTeam_id }}.png" class="img-fluid" width="150" height="auto"> {% else %}
-                    <img id="favTeamImage" src="{% static 'media/seahawks.png' %}" class="img-fluid" width="150" height="auto"> {% endif %}
+                    <img id="favTeamImage" src="{% static 'media/Seahawks.png' %}" class="img-fluid" width="150" height="auto"> {% endif %}
                 </div>
             </div>
             <div class="card-body">
