--- a/picks/static/picks/css/picks.css
+++ b/picks/static/picks/css/picks.css
@@ -5,6 +5,7 @@
     cursor: pointer;
     border-radius: 5px;
     box-shadow: 0 6px 8px 0 rgba(0, 0, 0, 0.2), 0 6px 20px 0 rgba(0, 0, 0, 0.19);
+    border: 2px solid #ffffff;
 }
 
 .pick-box-unselected {
@@ -15,6 +16,7 @@
 .pick-box-selected {
     background-color: #33A1FD;
     color: #ffffff;
+    border: 2px solid #2066a1;
 }
 
 .pick-box.locked {
