--- a/command/templates/command/seasonSettings.html
+++ b/command/templates/command/seasonSettings.html
@@ -60,6 +60,12 @@
                 <label>Location</label>
                 <input type="text" class="form-control" id="location">
             </div>
+            <div class="form-group col-md-6">
+                <label>Home Spread</label>
+                <input class="form-control" type="number" id="homeSpread">
+                <label>Away Spread</label>
+                <input class="form-control" type="number" id="awaySpread">
+            </div>
         </div>
         <button type="submit" id="addGame" class="btn btn-success">Create Game</button>
     </form>
