Updated games page to show live scores and how the user is doing

--- a/home/static/home/dashboard.css
+++ b/home/static/home/dashboard.css
@@ -40,6 +40,18 @@ a.dashboard-menu-item {
     color: #ffffff;
 }
 
+.team-logo.correct {
+    border: 2px solid green;
+    border-radius: 5px;
+    background-color: #94fc84;
+}
+
+.team-logo.incorrect {
+    border: 2px solid red;
+    border-radius: 5px;
+    background-color: #ff7676;
+}
+
 
 /*League Page Style*/
 
