--- a/home/templates/home/dashboard.html
+++ b/home/templates/home/dashboard.html
@@ -164,60 +164,118 @@
                 <div class="col-6 text-center">
                     <div class="d-flex justify-content-around align-items-center mb-2">
                         <div class="col-5 p-0">
-                            <img class="team-logo" src="/static/media/{{ currentGame.game.awayTeam.name }}.png"> {% if currentGame.game.awayScore %} {% if currentGame.game.winner == currentGame.game.awayTeam %}
-                            <h6><strong class="text-success">{{ currentGame.game.awayScore }}</strong></h6> {% else %}
-                            <h6><strong class="text-danger">{{ currentGame.game.awayScore }}</strong></h6> {% endif %} {% else %}
-                            <h5>-</h5>{% endif %}
+                            <img class="team-logo" src="/static/media/{{ currentGame.game.awayTeam.name }}.png"> 
+                            {% if currentGame.game.isComplete %} <!--Display final score-->
+                                <h6><strong class="{% if currentGame.game.winner == currentGame.game.awayTeam %}text-success{% else %}text-danger{% endif %}">{{ currentGame.game.awayScore }}</strong></h6>
+                            {% elif currentGame.game.pickLocked %} <!--Display in progress stats-->
+                                <h6><strong class="">{{ currentGame.game.awayScore }}</strong></h6>
+                            {% else %}
+                            <h6><strong class="">-</strong></h6>
+                            {% endif %}
                             <h6><small>({{ currentGame.game.awayTeam.wins }} - {{ currentGame.game.awayTeam.losses }} {% if currentGame.game.homeTeam.ties > 0 %} - {{ currentGame.game.homeTeam.ties }} {% endif %})</small></h6>
                         </div>
                         <div class="col p-0">
                             <h4>@</h4>
                         </div>
                         <div class="col-5 p-0">
-                            <img class="team-logo" src="/static/media/{{ currentGame.game.homeTeam.name }}.png"> {% if currentGame.game.homeScore %} {% if currentGame.game.winner == currentGame.game.homeTeam %}
-                            <h6><strong class="text-success">{{ currentGame.game.homeScore }}</strong></h6> {% else %}
-                            <h6><strong class="text-danger">{{ currentGame.game.homeScore }}</strong></h6> {% endif %} {% else %}
-                            <h5>-</h5>{% endif %}
-                            <h6><small>({{ currentGame.game.homeTeam.wins }} - {{ currentGame.game.homeTeam.losses }} {% if currentGame.game.awayTeam.ties > 0 %} - {{ currentGame.game.awayTeam.ties }} {% endif %})</small></h6>
+                            <img class="team-logo" src="/static/media/{{ currentGame.game.homeTeam.name }}.png"> 
+                            {% if currentGame.game.isComplete %} <!--Display final score-->
+                                <h6><strong class="{% if currentGame.game.winner == currentGame.game.homeTeam %}text-success{% else %}text-danger{% endif %}">{{ currentGame.game.homeScore }}</strong></h6>
+                            {% elif currentGame.game.pickLocked %} <!--Display in progress stats-->
+                                <h6><strong class="">{{ currentGame.game.homeScore }}</strong></h6>
+                            {% else %}
+                            <h6><strong class="">-</strong></h6>
+                            {% endif %}
+                            <h6><small>({{ currentGame.game.homeTeam.wins }} - {{ currentGame.game.homeTeam.losses }} {% if currentGame.game.homeTeam.ties > 0 %} - {{ currentGame.game.homeTeam.ties }} {% endif %})</small></h6>
                         </div>
                     </div>
                     <div class="d-flex justify-content-center">
-                        <h6 class="mr-2"><small>{{ currentGame.date }}</small></h6>
-                        <h6><small>{{ currentGame.time }}</small></h6>
+                        {% if currentGame.game.isComplete %}
+                            <h6 class="text-primary">Final</h6>
+                        {% elif currentGame.game.pickLocked == True %}
+                            <!--Game in progress-->
+                            <h6 class="text-primary">Q{{ currentGame.game.quarter }} - {{ currentGame.game.timeRemaining }}</h6>
+                        {% else %}
+                            <h6 class="mr-2"><small>{{ currentGame.date }}</small></h6>
+                            <h6><small>{{ currentGame.time }}</small></h6>
+                        {% endif %}
                     </div>
                 </div>
                 <div class="col-3 text-center pick">
-                    {% if currentGame.game.homeScore %} {% if currentGame.gameChoice.pickWinner %} {% if currentGame.gameChoice.correctPickFlag == True %}
-                    <img class="team-logo" src="/static/media/{{ currentGame.gameChoice.pickWinner.name }}.png"> {% if week == 1 or week == '1' %}
-                    <h6 class="text-success"><strong>+50</strong></h6>
+                    {% if currentGame.gameChoice.pickWinner %} 
+                        {% if currentGame.game.isComplete %}
+                        <!--Game is complete, display score-->
+                            {% if currentGame.gameChoice.correctPickFlag == True %}
+                                <img class="team-logo" src="/static/media/{{ currentGame.gameChoice.pickWinner.name }}.png"> 
+                                {% if week == 1 or week == '1' %}
+                                <h6 class="text-success"><strong>+50</strong></h6>
+                                {% else %}
+                                <h6 class="text-success"><strong>+25</strong></h6>
+                                {% endif %} 
+                            {% else %}
+                                <img class="team-logo" src="/static/media/{{ currentGame.gameChoice.pickWinner.name }}.png">
+                                <h6 class="text-danger"><strong>+0</strong></h6>
+                            {% endif %}
+                        {% else %}
+                            {% if currentGame.game.pickLocked %}
+                            <!--Display in progress game stats -->
+                                {% if currentGame.game.homeScore > currentGame.game.awayScore %} {% if currentGame.gameChoice.pickWinner == currentGame.game.homeTeam %}
+                                <!--User's pick is currently correct-->
+                                <img class="team-logo correct" src="/static/media/{{ currentGame.gameChoice.pickWinner.name }}.png">{% else %}
+                                <!--User's pick is currently not correct-->
+                                <img class="team-logo incorrect" src="/static/media/{{ currentGame.gameChoice.pickWinner.name }}.png">{% endif %} 
+                                {% elif currentGame.game.awayScore > currentGame.game.homeScore %} {% if currentGame.gameChoice.pickWinner == currentGame.game.awayTeam %}
+                                <!--User's pick is currently correct-->
+                                <img class="team-logo correct" src="/static/media/{{ currentGame.gameChoice.pickWinner.name }}.png">{% else %}
+                                <!--User's pick is currently not correct-->
+                                <img class="team-logo incorrect" src="/static/media/{{ currentGame.gameChoice.pickWinner.name }}.png">{% endif %} 
+                                {% else %}
+                                <img class="team-logo incorrect" src="/static/media/{{ currentGame.gameChoice.pickWinner.name }}.png">
+                                {% endif %}
+                            {% else %}
+                            <!--Game has not started, display user's pick-->
+                            <img class="team-logo" src="/static/media/{{ currentGame.gameChoice.pickWinner.name }}.png">
+                            {% endif %}
+                        {% endif %}
                     {% else %}
-                    <h6 class="text-success"><strong>+25</strong></h6>
-                    {% endif %} {% else %}
-                    <img class="team-logo" src="/static/media/{{ currentGame.gameChoice.pickWinner.name }}.png">
-                    <h6 class="text-danger"><strong>+0</strong></h6>
-                    {% endif %} {% else %}
-                    <h6>No Pick</h6>
-                    <h6 class="text-danger"><strong>+0</strong></h6>
-                    {% endif %} {% else %} {% if currentGame.gameChoice.pickWinner %}
-                    <img class="team-logo" src="/static/media/{{ currentGame.gameChoice.pickWinner.name }}.png">{% endif %} {% endif %}
+                        {% if currentGame.isComplete %}
+                            <h6>No Pick</h6>
+                            <h6 class="text-danger"><strong>+0</strong></h6>
+                        {% endif %}
+                    {% endif %}
                 </div>
                 <div class="col-3 text-center bet">
-                    {% if currentGame.game.homeScore %} {% if currentGame.gameChoice.betWinner %} {% if currentGame.gameChoice.correctBetFlag == True %}
-                    <img class="team-logo" src="/static/media/{{ currentGame.gameChoice.betWinner.name }}.png">
-                    <h6 class="text-success"><strong>+{{ currentGame.gameChoice.amountWon }}</strong></h6>
-                    {% else %}
-                    <img class="team-logo" src="/static/media/{{ currentGame.gameChoice.betWinner.name }}.png">
-                    <h6 class="text-danger"><strong>{{ currentGame.gameChoice.amountWon }}</strong></h6>
-                    {% endif %} {% if currentGame.gameChoice.betWinner == currentGame.game.homeTeam %}
-                    <h6>({{ currentGame.game.homeSpread|floatformat }}) {{ currentGame.gameChoice.betAmount }}</h6>
-                    {% else %}
-                    <h6>({{ currentGame.game.awaySpread|floatformat }}) {{ currentGame.gameChoice.betAmount }}</h6>
-                    {% endif %} {% endif %} {% else %} {% if currentGame.gameChoice.betWinner %}
-                    <img class="team-logo" src="/static/media/{{ currentGame.gameChoice.betWinner.name }}.png"> {% if currentGame.gameChoice.betWinner == currentGame.game.homeTeam %}
-                    <h6>({{ currentGame.game.homeSpread|floatformat }}) {{ currentGame.gameChoice.betAmount }}</h6>
-                    {% else %}
-                    <h6>({{ currentGame.game.awaySpread|floatformat }}) {{ currentGame.gameChoice.betAmount }}</h6>
-                    {% endif %} {% endif %} {% endif %}
+                    {% if currentGame.gameChoice.betWinner %}
+                        {% if currentGame.game.isComplete %}
+                            {% if currentGame.gameChoice.correctBetFlag == True %}
+                                <img class="team-logo" src="/static/media/{{ currentGame.gameChoice.betWinner.name }}.png">
+                                <h6 class="text-success"><strong>+{{ currentGame.gameChoice.amountWon }}</strong></h6>
+                            {% else %}
+                                <img class="team-logo" src="/static/media/{{ currentGame.gameChoice.betWinner.name }}.png">
+                                <h6 class="text-danger"><strong>{{ currentGame.gameChoice.amountWon }}</strong></h6>
+                            {% endif %} 
+                            {% if currentGame.gameChoice.betWinner == currentGame.game.homeTeam %}
+                                <h6>({{ currentGame.game.homeSpread|floatformat }}) {{ currentGame.gameChoice.betAmount }}</h6>
+                            {% else %}
+                                <h6>({{ currentGame.game.awaySpread|floatformat }}) {{ currentGame.gameChoice.betAmount }}</h6>
+                            {% endif %}
+                        {% elif currentGame.game.pickLocked %}
+                            <!--Display in progress game stats-->
+                            <img class="team-logo {% if currentGame.inProgressCorrectBetFlag == True %}correct {% else %}incorrect{% endif %}" src="/static/media/{{ currentGame.gameChoice.betWinner.name }}.png">
+                            {% if currentGame.gameChoice.betWinner == currentGame.game.homeTeam %}
+                                <h6>({{ currentGame.game.homeSpread|floatformat }}) {{ currentGame.gameChoice.betAmount }}</h6>
+                            {% else %}
+                                <h6>({{ currentGame.game.awaySpread|floatformat }}) {{ currentGame.gameChoice.betAmount }}</h6>
+                            {% endif %}
+                        {% else %} 
+                            <img class="team-logo" src="/static/media/{{ currentGame.gameChoice.betWinner.name }}.png"> 
+                            {% if currentGame.gameChoice.betWinner == currentGame.game.homeTeam %}
+                                <h6>({{ currentGame.game.homeSpread|floatformat }}) {{ currentGame.gameChoice.betAmount }}</h6>
+                            {% else %}
+                                <h6>({{ currentGame.game.awaySpread|floatformat }}) {{ currentGame.gameChoice.betAmount }}</h6>
+                            {% endif %}
+                        {% endif %} 
+                    {% endif %}
                 </div>
             </div>
             {% endfor %} {% else %}
