--- a/command/templates/command/seasonSettings.html
+++ b/command/templates/command/seasonSettings.html
@@ -48,7 +48,7 @@
                 <label>Game Date</label>
                 <input class="form-control" type="date" id="gameDate" min="2020-01-01" max="2030-01-01">
                 <label>Game Time</label>
-                <input class="form-control" type="time" id="gameTime" min="" max="">
+                <input class="form-control" type="time" id="gameTime" min="" max="" value="10:00">
             </div>
             <div class="form-group col-md-6">
                 <label>Week</label>
